--- a/QUOTER2.html
+++ b/QUOTER2.html
@@ -1543,10 +1543,10 @@
                     }
                 ]
             },
-            {
+                       { // --- UPDATED GAME CONSOLE SECTION STARTS HERE ---
                 categoryName: "Game Console Repair",
                 selectionType: "multiple",
-				iconSVG: `<i class="fas fa-gamepad"></i>`, // Font Awesome: Gamepad
+                iconSVG: `<i class="fas fa-gamepad"></i>`, // Font Awesome: Gamepad
                 brands: [
                     {
                         brandName: "Sony PlayStation",
@@ -1554,7 +1554,9 @@
                             {
                                 modelName: "PlayStation 4 (Original/Slim)",
                                 repairs: [
-                                    { id: "gc_sony_ps4_hdmi", name: "HDMI Port Repair", price: 80.00, description: "Fixes no video output or damaged port." },
+                                    { id: "gc_sony_ps4_hdmi", name: "HDMI Port Repair (Standard)", price: 80.00, description: "Fixes no video output or damaged port." },
+                                    { id: "gc_sony_ps4_hdmi_sameday", name: "HDMI Port Repair (Same Day)", price: 125.00, description: "Guaranteed same-day service for HDMI port issues." },
+                                    { id: "gc_sony_ps4_hdmi_1hour", name: "HDMI Port Repair (1 Hour)", price: 150.00, description: "Express 1-hour service for HDMI port issues." },
                                     { id: "gc_sony_ps4_discdrive", name: "Blu-ray Drive Repair", price: 100.00, description: "Console not reading game discs." },
                                     { id: "gc_sony_ps4_cleaning", name: "Console Cleaning Service", price: 60.00, description: "Internal dust removal and fan cleaning." },
                                     { id: "gc_sony_ps4_powersupply", name: "Power Supply Repair", price: 90.00, description: "Console not powering on or shutting down." },
@@ -1565,7 +1567,9 @@
                             {
                                 modelName: "PlayStation 4 Pro",
                                 repairs: [
-                                    { id: "gc_sony_ps4pro_hdmi", name: "HDMI Port Repair", price: 80.00, description: "Fixes no video output or damaged port." },
+                                    { id: "gc_sony_ps4pro_hdmi", name: "HDMI Port Repair (Standard)", price: 80.00, description: "Fixes no video output or damaged port." },
+                                    { id: "gc_sony_ps4pro_hdmi_sameday", name: "HDMI Port Repair (Same Day)", price: 125.00, description: "Guaranteed same-day service for HDMI port issues." },
+                                    { id: "gc_sony_ps4pro_hdmi_1hour", name: "HDMI Port Repair (1 Hour)", price: 150.00, description: "Express 1-hour service for HDMI port issues." },
                                     { id: "gc_sony_ps4pro_discdrive", name: "Blu-ray Drive Repair", price: 110.00, description: "Console not reading game discs." },
                                     { id: "gc_sony_ps4pro_cleaning", name: "Console Cleaning Service", price: 60.00, description: "Internal dust removal and fan cleaning." },
                                     { id: "gc_sony_ps4pro_powersupply", name: "Power Supply Repair", price: 95.00, description: "Console not powering on or shutting down." },
@@ -1576,7 +1580,9 @@
                             {
                                 modelName: "PlayStation 5 (Disc Edition)",
                                 repairs: [
-                                    { id: "gc_sony_ps5disc_hdmi", name: "HDMI Port Repair", price: 100.00, description: "Fixes no video output or damaged port." },
+                                    { id: "gc_sony_ps5disc_hdmi", name: "HDMI Port Repair (Standard)", price: 100.00, description: "Fixes no video output or damaged port." },
+                                    { id: "gc_sony_ps5disc_hdmi_sameday", name: "HDMI Port Repair (Same Day)", price: 125.00, description: "Guaranteed same-day service for HDMI port issues." },
+                                    { id: "gc_sony_ps5disc_hdmi_1hour", name: "HDMI Port Repair (1 Hour)", price: 150.00, description: "Express 1-hour service for HDMI port issues." },
                                     { id: "gc_sony_ps5disc_discdrive", name: "Blu-ray Drive Repair", price: 130.00, description: "Console not reading game discs." },
                                     { id: "gc_sony_ps5disc_cleaning", name: "Console Cleaning Service", price: 60.00, description: "Internal dust removal and liquid metal check/reapplication." },
                                     { id: "gc_sony_ps5disc_powersupply", name: "Power Supply Repair", price: 120.00, description: "Console not powering on or shutting down." },
@@ -1587,7 +1593,9 @@
                             {
                                 modelName: "PlayStation 5 (Digital Edition)",
                                 repairs: [
-                                    { id: "gc_sony_ps5digital_hdmi", name: "HDMI Port Repair", price: 100.00, description: "Fixes no video output or damaged port." },
+                                    { id: "gc_sony_ps5digital_hdmi", name: "HDMI Port Repair (Standard)", price: 100.00, description: "Fixes no video output or damaged port." },
+                                    { id: "gc_sony_ps5digital_hdmi_sameday", name: "HDMI Port Repair (Same Day)", price: 125.00, description: "Guaranteed same-day service for HDMI port issues." },
+                                    { id: "gc_sony_ps5digital_hdmi_1hour", name: "HDMI Port Repair (1 Hour)", price: 150.00, description: "Express 1-hour service for HDMI port issues." },
                                     { id: "gc_sony_ps5digital_cleaning", name: "Console Cleaning Service", price: 60.00, description: "Internal dust removal and liquid metal check/reapplication." },
                                     { id: "gc_sony_ps5digital_powersupply", name: "Power Supply Repair", price: 120.00, description: "Console not powering on or shutting down." },
                                     { id: "gc_sony_ps5digital_ssd", name: "SSD Storage Issue Diagnostic", price: 80.00, description: "Troubleshooting for storage errors (replacement quoted separately)." },
@@ -1602,7 +1610,9 @@
                              {
                                 modelName: "Xbox One S",
                                 repairs: [
-                                    { id: "gc_ms_xboxones_hdmi", name: "HDMI Port Repair", price: 80.00, description: "Fixes no video output or damaged port." },
+                                    { id: "gc_ms_xboxones_hdmi", name: "HDMI Port Repair (Standard)", price: 80.00, description: "Fixes no video output or damaged port." },
+                                    { id: "gc_ms_xboxones_hdmi_sameday", name: "HDMI Port Repair (Same Day)", price: 125.00, description: "Guaranteed same-day service for HDMI port issues." },
+                                    { id: "gc_ms_xboxones_hdmi_1hour", name: "HDMI Port Repair (1 Hour)", price: 150.00, description: "Express 1-hour service for HDMI port issues." },
                                     { id: "gc_ms_xboxones_discdrive", name: "Blu-ray Drive Repair", price: 95.00, description: "Console not reading game discs." },
                                     { id: "gc_ms_xboxones_cleaning", name: "Console Cleaning Service", price: 60.00, description: "Internal dust removal and fan cleaning." },
                                     { id: "gc_ms_xboxones_powersupply", name: "Power Supply Repair (Internal)", price: 90.00, description: "Console not powering on (for models with internal PSU)." },
@@ -1613,7 +1623,9 @@
                             {
                                 modelName: "Xbox One X",
                                 repairs: [
-                                    { id: "gc_ms_xboxonex_hdmi", name: "HDMI Port Repair", price: 80.00, description: "Fixes no video output or damaged port." },
+                                    { id: "gc_ms_xboxonex_hdmi", name: "HDMI Port Repair (Standard)", price: 80.00, description: "Fixes no video output or damaged port." },
+                                    { id: "gc_ms_xboxonex_hdmi_sameday", name: "HDMI Port Repair (Same Day)", price: 125.00, description: "Guaranteed same-day service for HDMI port issues." },
+                                    { id: "gc_ms_xboxonex_hdmi_1hour", name: "HDMI Port Repair (1 Hour)", price: 150.00, description: "Express 1-hour service for HDMI port issues." },
                                     { id: "gc_ms_xboxonex_discdrive", name: "Blu-ray Drive Repair", price: 100.00, description: "Console not reading game discs." },
                                     { id: "gc_ms_xboxonex_cleaning", name: "Console Cleaning Service", price: 60.00, description: "Internal dust removal and fan cleaning." },
                                     { id: "gc_ms_xboxonex_powersupply", name: "Power Supply Repair", price: 95.00, description: "Console not powering on or shutting down." },
@@ -1624,7 +1636,9 @@
                             {
                                 modelName: "Xbox Series S",
                                 repairs: [
-                                    { id: "gc_ms_xboxseriess_hdmi", name: "HDMI Port Repair", price: 100.00, description: "Fixes no video output or damaged port." },
+                                    { id: "gc_ms_xboxseriess_hdmi", name: "HDMI Port Repair (Standard)", price: 100.00, description: "Fixes no video output or damaged port." },
+                                    { id: "gc_ms_xboxseriess_hdmi_sameday", name: "HDMI Port Repair (Same Day)", price: 125.00, description: "Guaranteed same-day service for HDMI port issues." },
+                                    { id: "gc_ms_xboxseriess_hdmi_1hour", name: "HDMI Port Repair (1 Hour)", price: 150.00, description: "Express 1-hour service for HDMI port issues." },
                                     { id: "gc_ms_xboxseriess_cleaning", name: "Console Cleaning Service", price: 60.00, description: "Internal dust removal and fan cleaning." },
                                     { id: "gc_ms_xboxseriess_powersupply", name: "Power Supply Repair", price: 100.00, description: "Console not powering on or shutting down." },
                                     { id: "gc_ms_xboxseriess_ssd", name: "SSD Storage Issue Diagnostic", price: 75.00, description: "Troubleshooting (expansion/replacement quoted separately)." },
@@ -1634,7 +1648,9 @@
                             {
                                 modelName: "Xbox Series X",
                                 repairs: [
-                                    { id: "gc_ms_xboxseriesx_hdmi", name: "HDMI Port Repair", price: 100.00, description: "Fixes no video output or damaged port." },
+                                    { id: "gc_ms_xboxseriesx_hdmi", name: "HDMI Port Repair (Standard)", price: 100.00, description: "Fixes no video output or damaged port." },
+                                    { id: "gc_ms_xboxseriesx_hdmi_sameday", name: "HDMI Port Repair (Same Day)", price: 125.00, description: "Guaranteed same-day service for HDMI port issues." },
+                                    { id: "gc_ms_xboxseriesx_hdmi_1hour", name: "HDMI Port Repair (1 Hour)", price: 150.00, description: "Express 1-hour service for HDMI port issues." },
                                     { id: "gc_ms_xboxseriesx_discdrive", name: "Blu-ray Drive Repair", price: 120.00, description: "Console not reading game discs." },
                                     { id: "gc_ms_xboxseriesx_cleaning", name: "Console Cleaning Service", price: 60.00, description: "Internal dust removal and fan cleaning." },
                                     { id: "gc_ms_xboxseriesx_powersupply", name: "Power Supply Repair", price: 110.00, description: "Console not powering on or shutting down." },
@@ -1707,7 +1723,7 @@
                                     { id: "gc_ctrl_xboxone_stickdrift", name: "Analog Stick Drift Repair (Each Stick)", price: 30.00, description: "Fixes unwanted movement." },
                                     { id: "gc_ctrl_xboxone_button", name: "Button Replacement (e.g., A, B, LB, RB)", price: 30.00, description: "Per button or set, specify issue." },
                                     { id: "gc_ctrl_xboxone_chargeport", name: "Charging Port Repair (Micro-USB/USB-C)", price: 30.00, description: "Port replacement (specify type)." },
-                                     { id: "gc_ctrl_xboxone_bumper", name: "Bumper (LB/RB) Repair", price: 30.00, description: "Fixes broken or unresponsive bumpers." }
+                                    { id: "gc_ctrl_xboxone_bumper", name: "Bumper (LB/RB) Repair", price: 30.00, description: "Fixes broken or unresponsive bumpers." }
                                 ]
                             },
                             {
@@ -1735,14 +1751,14 @@
                                 modelName: "SCUF Controller (Various)",
                                 repairs: [
                                     { id: "gc_ctrl_scuf_stickdrift", name: "Analog Stick Drift Repair (Quote)", price: 40.00, description: "Starting price, model dependent." },
-                                    { id: "gc_ctrl_scuf_buttonpaddle", name: "Button/Paddle Repair (Quote)", price: 35.00, description: "Starting price, specify issue and model." },
+                                    { id: "gc_ctrl_scuf_buttonpaddle", name: "Button/Paddle Repair (Quote)", price: 35.00, description: "Specify issue and model." },
                                     { id: "gc_ctrl_scuf_chargeport", name: "Charging Port Repair (Quote)", price: 35.00, description: "Starting price, model dependent." }
                                 ]
                             }
                         ]
                     }
                 ]
-            },
+            }, // --- END OF UPDATED GAME CONSOLE SECTION ---
             {
                 categoryName: "Computer Repair", 
                 selectionType: "multiple",
