--- a/QUOTER2.html
+++ b/QUOTER2.html
@@ -161,6 +161,9 @@
 
         <div id="inlineContactSection" class="mt-10 pt-8 border-t border-gray-200 hidden-integrated" style="display: none;">
             <h2 class="text-2xl font-semibold text-gray-800 mb-6 text-center">Contact Us</h2>
+		<div class="flex justify-center mb-6">
+                <img src="https://speedy.uenicdn.com/203df42d-68ff-44a8-9fc5-6cd85963ee3a/c1024_410a/image/upload/v1745362365/business/9085d73d-c2cf-41e1-82c2-61a291fcb76a.jpg" alt="JWS Electronics Repair Storefront" class="rounded-lg shadow-md max-w-xs sm:max-w-sm md:max-w-md h-auto">
+            </div>
             <div class="grid md:grid-cols-2 gap-8 mb-6">
                 <div>
                     <h3 class="text-xl font-semibold text-gray-700 mb-3">Our Information</h3>
