--- a/QUOTER2.html
+++ b/QUOTER2.html
@@ -2576,7 +2576,7 @@
             {
                 categoryName: "Smart Watch Repair",
                 selectionType: "multiple",
-				iconSVG: `<i class="fas fa-stopwatch-20"></i>`, // Font Awesome: Stopwatch (alternative for watch)
+				iconSVG: `<i class="fa-regular fa-clock"></i>`, // Font Awesome: Stopwatch (alternative for watch)
                 brands: [
                     {
                         brandName: "Apple",
