--- a/QUOTER2.html
+++ b/QUOTER2.html
@@ -137,7 +137,7 @@
         </div>
 
         <div id="repairsArea" class="mb-6 min-h-[200px] max-h-[50vh] overflow-y-auto p-1">
-            <p id="repairsPlaceholder" class="text-gray-500 text-center py-4">Please complete selections to see repair options. You may choose multiple repairs of the same service category.</p>
+            <p id="repairsPlaceholder" class="text-gray-500 text-center py-4">Please complete selections to see repair options. You may choose multiple items of the same service category.</p>
             </div>
 
         <div class="bg-gray-50 p-6 rounded-lg shadow-inner">
