--- a/QUOTER2.html
+++ b/QUOTER2.html
@@ -182,7 +182,7 @@
                     <h3 class="text-lg font-medium text-orange-700 mb-2">Your Quoted Services:</h3>
                     <div id="contactFormQuoteItems" class="text-sm space-y-1 text-gray-700 max-h-48 overflow-y-auto"></div>
                     <p class="text-right font-bold mt-2 text-orange-600">Estimated Total: <span id="contactFormQuoteTotal"></span></p>
-                    <p class="text-xs text-center mt-4 text-gray-500">Please mention this quote when contacting us. Prices are subject to change at any time and are not always 100% accurate. All repairs arer also subject to sales tax.</p>
+                    <p class="text-xs text-center mt-4 text-gray-500">Please mention this quote when contacting us. Prices are subject to change at any time and are not always 100% accurate. All repairs are also subject to sales tax.</p>
                 </div>
             </div>
             <p class="text-center text-gray-700 mt-6">Please call, text, email, or visit us with your quote details to proceed with your repair.</p>
