--- a/QUOTER2.html
+++ b/QUOTER2.html
@@ -1611,7 +1611,7 @@
                                     { id: "gc_sony_ps5disc_cleaning", name: "Console Cleaning Service", price: 60.00, description: "Internal dust removal and liquid metal check/reapplication." },
                                     { id: "gc_sony_ps5disc_powersupply", name: "Power Supply Repair", price: 120.00, description: "Console not powering on or shutting down." },
                                     { id: "gc_sony_ps5disc_ssd", name: "SSD Storage Issue Diagnostic", price: 80.00, description: "Troubleshooting for storage errors (replacement quoted separately)." },
-                                    { id: "gc_sony_ps5disc_os", name: "OS Re-install / Software Fix", price: 80.00, description: "Fixes system errors or corruption." }
+                                    { id: "gc_sony_ps5disc_os", name: "OS Re-install / Software Fix", price: 60.00, description: "Fixes system errors or corruption." }
                                 ]
                             },
                             {
@@ -1623,9 +1623,33 @@
                                     { id: "gc_sony_ps5digital_cleaning", name: "Console Cleaning Service", price: 60.00, description: "Internal dust removal and liquid metal check/reapplication." },
                                     { id: "gc_sony_ps5digital_powersupply", name: "Power Supply Repair", price: 120.00, description: "Console not powering on or shutting down." },
                                     { id: "gc_sony_ps5digital_ssd", name: "SSD Storage Issue Diagnostic", price: 80.00, description: "Troubleshooting for storage errors (replacement quoted separately)." },
-                                    { id: "gc_sony_ps5digital_os", name: "OS Re-install / Software Fix", price: 80.00, description: "Fixes system errors or corruption." }
+                                    { id: "gc_sony_ps5digital_os", name: "OS Re-install / Software Fix", price: 60.00, description: "Fixes system errors or corruption." }
                                 ]
-                            }
+                            },
+			     { // NEWLY ADDED
+                                modelName: "PlayStation 5 Slim (Disc Edition)",
+                                repairs: [
+                                    { id: "gc_sony_ps5slimdisc_hdmi", name: "HDMI Port Repair (Standard)", price: 100.00, description: "Fixes no video output or damaged port." },
+                                    { id: "gc_sony_ps5slimdisc_hdmi_sameday", name: "HDMI Port Repair (Same Day)", price: 125.00, description: "Guaranteed same-day service for HDMI port issues." },
+                                    { id: "gc_sony_ps5slimdisc_hdmi_1hour", name: "HDMI Port Repair (1 Hour)", price: 150.00, description: "Express 1-hour service for HDMI port issues." },
+                                    { id: "gc_sony_ps5slimdisc_discdrive", name: "Blu-ray Drive Repair", price: 130.00, description: "Console not reading game discs." },
+                                    { id: "gc_sony_ps5slimdisc_cleaning", name: "Console Cleaning Service", price: 60.00, description: "Internal dust removal and liquid metal check/reapplication." },
+                                    { id: "gc_sony_ps5slimdisc_powersupply", name: "Power Supply Repair", price: 120.00, description: "Console not powering on or shutting down." },
+                                    { id: "gc_sony_ps5slimdisc_ssd", name: "SSD Storage Issue Diagnostic", price: 80.00, description: "Troubleshooting for storage errors (replacement quoted separately)." },
+                                    { id: "gc_sony_ps5slimdisc_os", name: "OS Re-install / Software Fix", price: 60.00, description: "Fixes system errors or corruption." }
+                                ]
+                            },
+                            { // NEWLY ADDED
+                                modelName: "PlayStation 5 Pro",
+                                repairs: [
+                                    { id: "gc_sony_ps5pro_hdmi", name: "HDMI Port Repair (Standard)", price: 100.00, description: "Fixes no video output or damaged port." },
+                                    { id: "gc_sony_ps5pro_hdmi_sameday", name: "HDMI Port Repair (Same Day)", price: 125.00, description: "Guaranteed same-day service for HDMI port issues." },
+                                    { id: "gc_sony_ps5pro_hdmi_1hour", name: "HDMI Port Repair (1 Hour)", price: 150.00, description: "Express 1-hour service for HDMI port issues." },
+                                    { id: "gc_sony_ps5pro_discdrive", name: "Blu-ray Drive Repair", price: 150.00, description: "Console not reading game discs." },
+                                    { id: "gc_sony_ps5pro_cleaning", name: "Console Cleaning Service", price: 60.00, description: "Internal dust removal and liquid metal check/reapplication." },
+                                    { id: "gc_sony_ps5pro_os", name: "OS Re-install / Software Fix", price: 80.00, description: "Fixes system errors or corruption." }
+                                ]
+                            },
                         ]
                     },
                     {
