--- a/QUOTER2.html
+++ b/QUOTER2.html
@@ -185,7 +185,7 @@
                     <div id="contactFormQuoteItems" class="text-sm space-y-1 text-gray-700 max-h-48 overflow-y-auto"></div>
                     <hr id="contactFormQuoteSeparator" class="my-2 border-gray-300" style="display: none;">
                     <p class="text-right font-bold mt-2 text-orange-600 text-2xl">Estimated Total: <span id="contactFormQuoteTotal"></span></p>
-                    <p class="text-xs text-center mt-4 text-gray-500">Please mention this quote when contacting us. Prices can change at any time and all repairs are subjest to NY State sales tax.</p>
+                    <p class="text-xs text-center mt-4 text-gray-500">Please mention this quote when contacting us. Prices can change at any time and all repairs are subject to NY State sales tax.</p>
                 </div>
             </div>
             <p class="text-center text-gray-700 mt-6">Please Call, Text, E-Mail, or Visit us with your quote details to proceed with your repair.</p>
