--- a/mailin.html
+++ b/mailin.html
@@ -139,7 +139,7 @@
             <div class="mb-6 p-4 border border-gray-200 rounded-md bg-yellow-50">
                 <h2 class="text-xl sm:text-2xl font-semibold text-gray-700 mb-3">Mailing Instructions</h2>
                 <p class="text-gray-700 mb-1.5 text-sm">
-                    1.  <strong>Package your device securely:</strong> Use appropriate padding (bubble wrap, foam peanuts) to prevent damage during transit.
+                    1.  <strong>Package your device securely:</strong> Use appropriate padding (bubble wrap, foam peanuts) to prevent damage during transit. Do not include any wires or chargers.
                 </p>
                 <p class="text-gray-700 mb-1.5 text-sm">
                     2.  <strong>Include this completed form:</strong> Place the printed form inside the package with your device.
@@ -154,7 +154,10 @@
                     631-855-5555 or 631-606-2FIX(2349)
                 </address>
                 <p class="text-gray-700 mt-2 text-sm">
-                    We recommend using a shipping service with tracking and insurance.
+                    We recommend using a shipping service with tracking and insurance. 
+                    After we receive your device and chek it in, we will contact you with the diagnosis and exact pricing before proceeding with repair.
+                    Return shipping is included for most devices if the repair is performed. 
+                    If we are not repairing the device or device is unrepairable then you will be charged for return shipping.  
                 </p>
             </div>
 
