--- a/mailin.html
+++ b/mailin.html
@@ -155,7 +155,7 @@
                 </address>
                 <p class="text-gray-700 mt-2 text-sm">
                     We recommend using a shipping service with tracking and insurance. 
-                    After we receive your device and chek it in, we will contact you with the diagnosis and exact pricing before proceeding with repair.
+                    After we receive your device and check it in, we will contact you with the diagnosis and exact pricing before proceeding with repair.
                     Return shipping is included for most devices if the repair is performed. 
                     If we are not repairing the device or device is unrepairable then you will be charged for return shipping.  
                 </p>
